Fix missing color on the playback of a muted note

--- a/src/drum/components/drum/drum.scss
+++ b/src/drum/components/drum/drum.scss
@@ -40,6 +40,10 @@ ml-drum {
   }
 
   .isPlaying {
+    .beat {
+      background-color: #787e84;
+    }
+
     .beat.active {
       background-color: white;
     }
